# SQL-AI-Agent

./: .env  README.md  basemodel.py  db.cfg  llm_api.py  main.py  prompt_template.py  pyproject.toml  server.py  test.py
Documents/GitHub/brew/SQL AIAGENT/: .env  README.md  db.cfg  mcp_server.py
Documents/GitHub/brew/SQL AIAGENT/Tools/: Calculators.py
Documents/GitHub/brew/SQL AIAGENT/llm_prompt_template/: prompt_template.json
Documents/GitHub/brew/SQL AIAGENT/logs/: progress.md
Documents/GitHub/brew/SQL AIAGENT/static/: main.js
Tools/: MySQL.py
static/: index.html  style.css
